--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI and automatic releases
 on:
   pull_request:
   push:
-    branches: [ master ]
+    branches: [ main ]
 jobs:
   ci:
     strategy:
