--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 buildscript{
   ext {
     kotlinCoroutinesVersion = '1.4.1'
+    ktorVersion = '1.4.1'
     junit5Version = '5.7.0'
+    okhttpVersion = '4.9.0'
   }
 }
 
@@ -21,6 +23,18 @@ apply from: 'jacoco.gradle'
 
 group = "tech.relaycorp"
 
+sourceSets {
+  integrationTest {
+    compileClasspath += sourceSets.main.output
+    runtimeClasspath += sourceSets.main.output
+  }
+}
+
+configurations {
+  integrationTestImplementation.extendsFrom testImplementation
+  integrationTestRuntimeOnly.extendsFrom runtimeOnly
+}
+
 repositories {
   jcenter()
 }
@@ -28,11 +42,19 @@ repositories {
 dependencies {
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion"
 
+  implementation("io.ktor:ktor-client-okhttp:$ktorVersion")
+  implementation("com.squareup.okhttp3:okhttp:$okhttpVersion")
+  implementation("dnsjava:dnsjava:3.3.1")
+
   testImplementation("org.jetbrains.kotlin:kotlin-test")
   testImplementation("org.junit.jupiter:junit-jupiter:$junit5Version")
   testImplementation("org.junit.jupiter:junit-jupiter-params:$junit5Version")
   testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
   testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlinCoroutinesVersion")
+  testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0")
+  testImplementation("org.mockito:mockito-inline:3.6.28")
+  testImplementation("io.ktor:ktor-client-mock:$ktorVersion")
+  testImplementation("io.ktor:ktor-client-mock-jvm:$ktorVersion")
 }
 
 kotlin {
@@ -59,6 +81,19 @@ tasks.withType(KotlinCompile).all {
 test {
   useJUnitPlatform()
 }
+
+task integrationTest(type: Test) {
+  description = 'Integration tests'
+  group = 'verification'
+
+  testClassesDirs = sourceSets.integrationTest.output.classesDirs
+  classpath = sourceSets.integrationTest.runtimeClasspath
+  shouldRunAfter test
+
+  useJUnitPlatform()
+}
+
+check.dependsOn integrationTest
 
 // Documentation
 
