--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,11 @@ updates:
     time: "08:00"
     timezone: Etc/UCT
   open-pull-requests-limit: 99
+  ignore:
+    - dependency-name: "kotlinCoroutinesVersion"
+      versions:
+        - "*-native-mt"
+
 - package-ecosystem: npm
   directory: "/"
   schedule:
