chore(dependabot): Use semantic commits

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,17 +1,16 @@
 version: 2
 updates:
-- package-ecosystem: gradle
-  directory: "/"
-  schedule:
-    interval: weekly
-    time: "08:00"
-    timezone: Etc/UCT
-  open-pull-requests-limit: 99
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: weekly
-    time: "08:00"
-    timezone: Etc/UCT
-  open-pull-requests-limit: 99
-  versioning-strategy: increase
+  - package-ecosystem: gradle
+    directory: "/"
+    schedule:
+      interval: weekly
+    commit-message:
+      prefix: "fix(deps):"
+      prefix-development: "chore(deps):"
+  - package-ecosystem: npm
+    directory: "/"
+    schedule:
+      interval: weekly
+    commit-message:
+      prefix: "fix(deps):"
+      prefix-development: "chore(deps):"
