fix(deps): Target Java 11 (#165)

--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -37,9 +37,9 @@ tasks.test {
   testLogging {
     events("passed", "skipped", "failed")
   }
-  finalizedBy("jacocoTestReport")
   doLast {
     println("View code coverage at:")
     println("file://$buildDir/reports/coverage/index.html")
   }
+  finalizedBy("jacocoTestReport", "jacocoTestCoverageVerification")
 }
