--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ root = true
 max_line_length = 100
 
 [*.kt]
-disabled_rules = import-ordering
+ktlint_disabled_rules = import-ordering
 
 [*.md]
 max_line_length = off
